Fixing text title overflow in headers(fixes #1839)

--- a/src/app/courses/view-courses/courses-view.scss
+++ b/src/app/courses/view-courses/courses-view.scss
@@ -19,4 +19,13 @@
     overflow: auto;
   }
 
+  .title {
+    white-space: nowrap;
+    height: 22px;
+    width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font: 20px/22px Arial;
+  }
+
 }
