--- a/src/app/meetups/view-meetups/meetups-view.scss
+++ b/src/app/meetups/view-meetups/meetups-view.scss
@@ -6,4 +6,14 @@
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "lt rt";
   }
+
+  .title {
+    white-space: nowrap;
+    height: 22px;
+    width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font: 20px/22px Arial;
+  }
+
 }
