--- a/src/app/resources/view-resources/resources-view.scss
+++ b/src/app/resources/view-resources/resources-view.scss
@@ -36,4 +36,14 @@
       max-height: 60vh;
     }
   }
+
+  .title {
+    white-space: nowrap;
+    height: 22px;
+    width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font: 20px/22px Arial;
+  }
+
 }
