--- a/src/app/teams/teams-view.scss
+++ b/src/app/teams/teams-view.scss
@@ -15,4 +15,13 @@
     overflow: auto;
   }
 
+  .title {
+    white-space: nowrap;
+    height: 22px;
+    width: 700px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font: 20px/22px Arial;
+  }
+
 }
